update swagger api doc
