# response/reseponse.go
@@ -1,0 +1,22 @@
+package response
+
+import "github.com/linskybing/platform-go/models"
+
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
+
+type MessageResponse struct {
+	Message string `json:"message"`
+}
+
+type TokenResponse struct {
+	Token    string `json:"token"`
+	UID      uint   `json:"user_id"`
+	Username string `json:"username"`
+}
+
+type GroupResponse struct {
+	Message string       `json:"message"`
+	Group   models.Group `json:"group"`
+}
